k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tubearchivist
  namespace: tubearchivist
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: tubearchivist.talos
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tubearchivist
                port:
                  number: 8000
